--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,10 @@
         margin: 0;
         font-family: 'Urbanist', sans-serif;
       }
+
+      body::-webkit-scrollbar{
+        display: none;
+      }
     </style>
 
     <title>Shoppie</title>
